[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/EmptyAttack.png" type="Texture" id=1]
[ext_resource path="res://assets/AttackBar.png" type="Texture" id=2]
[ext_resource path="res://GUI.gd" type="Script" id=3]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="AttackBar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="AttackBar"]
margin_left = 367.81
margin_top = 540.665
margin_right = 687.81
margin_bottom = 590.665
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="AttackBar/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedAttack" type="TextureRect" parent="AttackBar/Background/HBoxContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureRect" type="TextureRect" parent="AttackBar/Background/HBoxContainer/SelectedAttack"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="Label" parent="AttackBar/Background/HBoxContainer"]
margin_left = 44.0
margin_top = 18.0
margin_right = 74.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 0 )

[node name="Shortcut1" type="TextureRect" parent="AttackBar/Background/HBoxContainer"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="AttackBar/Background/HBoxContainer/Shortcut1" groups=[
"Shortcuts",
]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut2" type="TextureRect" parent="AttackBar/Background/HBoxContainer"]
margin_left = 122.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="AttackBar/Background/HBoxContainer/Shortcut2" groups=[
"Shortcuts",
]]
margin_right = 40.0
margin_bottom = 40.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut3" type="TextureRect" parent="AttackBar/Background/HBoxContainer"]
margin_left = 166.0
margin_top = 5.0
margin_right = 206.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="AttackBar/Background/HBoxContainer/Shortcut3" groups=[
"Shortcuts",
]]
margin_right = 40.0
margin_bottom = 40.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut4" type="TextureRect" parent="AttackBar/Background/HBoxContainer"]
margin_left = 210.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="AttackBar/Background/HBoxContainer/Shortcut4" groups=[
"Shortcuts",
]]
margin_right = 40.0
margin_bottom = 40.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut5" type="TextureRect" parent="AttackBar/Background/HBoxContainer"]
margin_left = 254.0
margin_top = 5.0
margin_right = 294.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="AttackBar/Background/HBoxContainer/Shortcut5" groups=[
"Shortcuts",
]]
margin_right = 40.0
margin_bottom = 40.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
